--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
         </div>
         <img class="page-header-img" src="" alt="text" height="214" />
       </header>
+      <main class="content">
+        <section class="About-product">
+          <div class="about-product-wrp">
+            <span class="about-product-title"> About your product </span>
+            <p class="about-product-txt">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+              facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro
+              ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+            </p>
+            <p class="about-product-txt">
+              Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque,
+              ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga
+              quaerat quam animi dolores. Sequi itaque, unde perferendis nemo
+              debitis dolor.
+            </p>
+          </div>
+          <video
+            class="about-product-video"
+            src="#"
+            width="430"
+            height="245"
+          ></video>
+        </section>
+      </main>
     </div>
   </body>
 </html>
