--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -8,44 +8,114 @@
   </head>
   <body>
     <div class="container">
-      <header class="page-header">
-        <div class="page-header-text">
-          <span class="page-header-title">Product name</span>
-          <ul class="page-header-list">
-            <li class="ph-item">
+      <header class="main-header">
+        <div class="main-header-wrp">
+          <h1 class="main-header-title">Product name</h1>
+          <ul class="main-header-list">
+            <li class="main-header-list-item">
               Put on this page information about your product
             </li>
-            <li class="ph-item">A detailed description of your product</li>
-            <li class="ph-item">Tell us about the advantages and merits</li>
-            <li class="ph-item">Associate the page with the payment system</li>
+            <li class="main-header-list-item">
+              A detailed description of your product
+            </li>
+            <li class="main-header-list-item">
+              Tell us about the advantages and merits
+            </li>
+            <li class="main-header-list-item">
+              Associate the page with the payment system
+            </li>
           </ul>
         </div>
-        <img class="page-header-img" src="" alt="text" height="214" />
+        <img
+          class="main-header-img"
+          src="#"
+          alt="фото товара"
+          width="469"
+          height="214"
+        />
       </header>
       <main class="content">
-        <section class="About-product">
+        <section class="about-product">
           <div class="about-product-wrp">
-            <span class="about-product-title"> About your product </span>
-            <p class="about-product-txt">
+            <h2 class="about-product-title">About your product</h2>
+            <p class="about-product-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
               facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro
               ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
             </p>
-            <p class="about-product-txt">
+            <p class="about-product-text">
               Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque,
               ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga
               quaerat quam animi dolores. Sequi itaque, unde perferendis nemo
               debitis dolor.
             </p>
           </div>
-          <video
-            class="about-product-video"
-            src="#"
-            width="430"
-            height="245"
-          ></video>
+          <video class="about-product-video" src="#" width="" height=""></video>
+        </section>
+        <section class="dignity">
+          <h2></h2>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </section>
+        <section class="screenshots">
+          <h2></h2>
+          <figure>
+            <img src="" alt="" width="" height="" />
+            <figcaption>
+              <h3></h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Explicabo quas maiores velit, recusandae minima a consequatur,
+                eligendi harum ipsam expedita doloribus, doloremque cum aut
+                blanditiis ullam perspiciatis maxime earum assumenda!
+              </p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="" alt="" width="" height="" />
+            <figcaption>
+              <h3></h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Explicabo quas maiores velit, recusandae minima a consequatur,
+                eligendi harum ipsam expedita doloribus, doloremque cum aut
+                blanditiis ullam perspiciatis maxime earum assumenda!
+              </p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="" alt="" width="" height="" />
+            <figcaption>
+              <h3></h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Explicabo quas maiores velit, recusandae minima a consequatur,
+                eligendi harum ipsam expedita doloribus, doloremque cum aut
+                blanditiis ullam perspiciatis maxime earum assumenda!
+              </p>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="" alt="" width="" height="" />
+            <figcaption>
+              <h3></h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Explicabo quas maiores velit, recusandae minima a consequatur,
+                eligendi harum ipsam expedita doloribus, doloremque cum aut
+                blanditiis ullam perspiciatis maxime earum assumenda!
+              </p>
+            </figcaption>
+          </figure>
         </section>
       </main>
+      <footer></footer>
     </div>
   </body>
 </html>
