--- a/index.html
+++ b/index.html
@@ -53,15 +53,97 @@
           <video class="about-product-video" src="#" width="" height=""></video>
         </section>
         <section class="dignity">
-          <h2></h2>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+          <h2 class="dignity-title">Dignity and pluses product</h2>
+          <div class="dignity-text">
+            <div class="dignity-item-wrp">
+              <details class="dignity-item">
+                <summary class="dignity-item-title">
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </summary>
+                <p>
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </p>
+              </details>
+              <details class="dignity-item">
+                <summary class="dignity-item-title">
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </summary>
+                <p>
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </p>
+              </details>
+              <details class="dignity-item">
+                <summary class="dignity-item-title">
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </summary>
+                <p>
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </p>
+              </details>
+            </div>
+            <div class="dignity-item-wrp">
+              <details class="dignity-item">
+                <summary class="dignity-item-title">
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </summary>
+                <p>
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </p>
+              </details>
+              <details class="dignity-item">
+                <summary class="dignity-item-title">
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </summary>
+                <p>
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </p>
+              </details>
+              <details class="dignity-item">
+                <summary class="dignity-item-title">
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </summary>
+                <p>
+                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                  amet atque, impedit iure placeat, ullam. Reprehenderit
+                  aliquam, nemo cum velit ratione perferendis quas, maxime,
+                  quaerat porro totam, dolore minus inventore.
+                </p>
+              </details>
+            </div>
+          </div>
         </section>
         <section class="screenshots">
           <h2></h2>
