creat block Reviews

--- a/index.html
+++ b/index.html
@@ -54,147 +54,167 @@
         </section>
         <section class="dignity">
           <h2 class="dignity-title">Dignity and pluses product</h2>
-          <div class="dignity-text">
-            <div class="dignity-item-wrp">
-              <details class="dignity-item">
-                <summary class="dignity-item-title">
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </summary>
-                <p>
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </p>
-              </details>
-              <details class="dignity-item">
-                <summary class="dignity-item-title">
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </summary>
-                <p>
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </p>
-              </details>
-              <details class="dignity-item">
-                <summary class="dignity-item-title">
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </summary>
-                <p>
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </p>
-              </details>
-            </div>
-            <div class="dignity-item-wrp">
-              <details class="dignity-item">
-                <summary class="dignity-item-title">
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </summary>
-                <p>
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </p>
-              </details>
-              <details class="dignity-item">
-                <summary class="dignity-item-title">
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </summary>
-                <p>
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </p>
-              </details>
-              <details class="dignity-item">
-                <summary class="dignity-item-title">
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </summary>
-                <p>
-                  Delectus dolorem vero quae beatae quasi dolor deserunt iste
-                  amet atque, impedit iure placeat, ullam. Reprehenderit
-                  aliquam, nemo cum velit ratione perferendis quas, maxime,
-                  quaerat porro totam, dolore minus inventore.
-                </p>
-              </details>
-            </div>
+          <div class="dignity-item-wrp">
+            <details class="dignity-item">
+              <summary class="dignity-item-title">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                amet atque, impedit iure placeat, ullam. Reprehenderit
+                aliquam, nemo cum velit ratione perferendis quas, maxime,
+                quaerat porro totam, dolore minus inventore.
+              </summary>
+              <p>
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                amet atque, impedit iure placeat, ullam. Reprehenderit
+                aliquam, nemo cum velit ratione perferendis quas, maxime,
+                quaerat porro totam, dolore minus inventore.
+              </p>
+            </details>
+            <details class="dignity-item">
+              <summary class="dignity-item-title">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                amet atque, impedit iure placeat, ullam. Reprehenderit
+                aliquam, nemo cum velit ratione perferendis quas, maxime,
+                quaerat porro totam, dolore minus inventore.
+              </summary>
+              <p>
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                amet atque, impedit iure placeat, ullam. Reprehenderit
+                aliquam, nemo cum velit ratione perferendis quas, maxime,
+                quaerat porro totam, dolore minus inventore.
+              </p>
+            </details>
+            <details class="dignity-item">
+              <summary class="dignity-item-title">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                amet atque, impedit iure placeat, ullam. Reprehenderit
+                aliquam, nemo cum velit ratione perferendis quas, maxime,
+                quaerat porro totam, dolore minus inventore.
+              </summary>
+              <p>
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                amet atque, impedit iure placeat, ullam. Reprehenderit
+                aliquam, nemo cum velit ratione perferendis quas, maxime,
+                quaerat porro totam, dolore minus inventore.
+              </p>
+            </details>
+          </div>
+              <div class="dignity-item-wrp">
+                <details class="dignity-item">
+                  <summary class="dignity-item-title">
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                    amet atque, impedit iure placeat, ullam. Reprehenderit
+                    aliquam, nemo cum velit ratione perferendis quas, maxime,
+                    quaerat porro totam, dolore minus inventore.
+                  </summary>
+                  <p>
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                    amet atque, impedit iure placeat, ullam. Reprehenderit
+                    aliquam, nemo cum velit ratione perferendis quas, maxime,
+                    quaerat porro totam, dolore minus inventore.
+                  </p>
+                </details>
+                <details class="dignity-item">
+                  <summary class="dignity-item-title">
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                    amet atque, impedit iure placeat, ullam. Reprehenderit
+                    aliquam, nemo cum velit ratione perferendis quas, maxime,
+                    quaerat porro totam, dolore minus inventore.
+                  </summary>
+                  <p>
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                    amet atque, impedit iure placeat, ullam. Reprehenderit
+                    aliquam, nemo cum velit ratione perferendis quas, maxime,
+                    quaerat porro totam, dolore minus inventore.
+                  </p>
+                </details>
+                <details class="dignity-item">
+                  <summary class="dignity-item-title">
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                    amet atque, impedit iure placeat, ullam. Reprehenderit
+                    aliquam, nemo cum velit ratione perferendis quas, maxime,
+                    quaerat porro totam, dolore minus inventore.
+                  </summary>
+                  <p>
+                    Delectus dolorem vero quae beatae quasi dolor deserunt iste
+                    amet atque, impedit iure placeat, ullam. Reprehenderit
+                    aliquam, nemo cum velit ratione perferendis quas, maxime,
+                    quaerat porro totam, dolore minus inventore.
+                  </p>
+                </details>
+              </div>
+              
           </div>
         </section>
         <section class="screenshots">
-          <h2></h2>
-          <figure>
-            <img src="" alt="" width="" height="" />
+          <h2 class="screenshots-title">Screenshots</h2>
+          <figure class="screen-item">
+            <img class="screen-img" src="#" alt="photo" width="" height="" />
             <figcaption>
-              <h3></h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo quas maiores velit, recusandae minima a consequatur,
-                eligendi harum ipsam expedita doloribus, doloremque cum aut
-                blanditiis ullam perspiciatis maxime earum assumenda!
+              <h3 class="screen-item-title">The description for the image</h3>
+              <p class="screen-item-text">
+                Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
+                itaque, ipsa vel exercitationem ullam quos aut nostrum
+                cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
+                perferendis nemo debitis dolor.
               </p>
             </figcaption>
           </figure>
-          <figure>
-            <img src="" alt="" width="" height="" />
+          <figure class="screen-item">
+            <img class="screen-img" src="" alt="photo" width="" height="" />
             <figcaption>
-              <h3></h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo quas maiores velit, recusandae minima a consequatur,
-                eligendi harum ipsam expedita doloribus, doloremque cum aut
-                blanditiis ullam perspiciatis maxime earum assumenda!
+              <h3 class="screen-item-title">The description for the image</h3>
+              <p class="screen-item-text">
+                Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque
+                itaque, ipsa vel exercitationem ullam quos aut nostrum
+                cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
+                perferendis nemo debitis dolor.
               </p>
             </figcaption>
           </figure>
-          <figure>
-            <img src="" alt="" width="" height="" />
+          <figure class="screen-item">
+            <img class="screen-img" src="" alt="photo" width="" height="" />
             <figcaption>
-              <h3></h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo quas maiores velit, recusandae minima a consequatur,
-                eligendi harum ipsam expedita doloribus, doloremque cum aut
-                blanditiis ullam perspiciatis maxime earum assumenda!
+              <h3 class="screen-item-title">The description for the image</h3>
+              <p class="screen-item-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+                facilis fuga, illo at. Natus eos, eligendi illum rerum omnis
+                porro ex, magni, explicabo veniam incidunt in quam sapiente ut
+                ipsum.
               </p>
             </figcaption>
           </figure>
-          <figure>
-            <img src="" alt="" width="" height="" />
+          <figure class="screen-item">
+            <img class="screen-img" src="" alt="photo" width="" height="" />
             <figcaption>
-              <h3></h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo quas maiores velit, recusandae minima a consequatur,
-                eligendi harum ipsam expedita doloribus, doloremque cum aut
-                blanditiis ullam perspiciatis maxime earum assumenda!
+              <h3 class="screen-item-title">The description for the image</h3>
+              <p class="screen-item-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+                facilis fuga, illo at. Natus eos, eligendi illum rerum omnis
+                porro ex, magni, explicabo veniam incidunt in quam sapiente ut
+                ipsum.
               </p>
             </figcaption>
           </figure>
+        </section>
+        <section class="Reviews">
+          <span class="Reviews-title">Reviews</span>
+ <div class="Reviews-item">
+   <div class="Reviews-img"></div>
+   <p class="Reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?<span class="Reviews-text-sign">Lourens S.</span></p>
+ </div>
+ <div class="Reviews-item">
+   <div class="Reviews-img"></div>
+   <p class="Reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?<span class="Reviews-text-sign">Lourens S.</span></p>
+ </div>
+ <div class="Reviews-item">
+   <div class="Reviews-img"></div>
+   <p class="Reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?<span class="Reviews-text-sign">Lourens S.</span></p>
+ </div>
+ <div class="Reviews-item">
+   <div class="Reviews-img"></div>
+   <p class="Reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?<span class="Reviews-text-sign">Lourens S.</span></p>
+ </div>
+
         </section>
       </main>
       <footer></footer>
