--- a/index.html
+++ b/index.html
@@ -214,10 +214,73 @@
    <div class="Reviews-img"></div>
    <p class="Reviews-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?<span class="Reviews-text-sign">Lourens S.</span></p>
  </div>
-
+        </section>
+        <section class="buy">
+          <h2 class="buy-title">Buy it now</h2>
+          <div class="buy-item">
+            <h3 class="buy-item-title">Standart</h3>
+            <p class="price">$100</p>
+            <ol class="buy-list">
+              <li class="buy-list-items">Porro officia cumque sint deleniti;</li>
+              <li class="buy-list-items">Тemo facere rem vitae odit;</li>
+              <li class="buy-list-items">Cum odio, iste quia doloribus autem;</li>
+              <li class="buy-list-items">Aperiam nulla ea neque.</li>
+            </ol >
+            <button class="buy-btn">buy</button>
+          </div>
+          <div class="buy-item">
+            <h3 class="buy-item-title">Premium</h3>
+            <p class="price">$150</p>
+            <ol class="buy-list">
+              <li class="buy-list-items">Porro officia cumque sint deleniti;</li>
+              <li class="buy-list-items">Тemo facere rem vitae odit;</li>
+              <li class="buy-list-items"> Cum odio, iste quia doloribus autem;</li>
+              <li class="buy-list-items">Aperiam nulla ea neque.</li>
+              <li class="buy-list-items">Porro officia cumque sint deleniti;</li>
+              <li class="buy-list-items">Тemo facere rem vitae odit;</li>
+              <li class="buy-list-items">Cum odio, iste quia doloribus autem;</li>
+              <li class="buy-list-items">Aperiam nulla ea neque.</li>
+            </ol>
+            <button class="buy-btn">buy</button>
+          </div>
+          <div class="buy-item">
+            <h3 class="buy-item-title">Lux</h3>
+            <p class="price">$200</p>
+            <ol class="buy-list">
+              <li class="buy-list-items">Porro officia cumque sint deleniti;</li>
+              <li class="buy-list-items">Тemo facere rem vitae odit;</li>
+              <li class="buy-list-items">Cum odio, iste quia doloribus autem;</li>
+              <li class="buy-list-items">Aperiam nulla ea neque.</li>
+              <li class="buy-list-items">Porro officia cumque sint deleniti;</li>
+              <li class="buy-list-items">Тemo facere rem vitae odit;</li>
+              <li class="buy-list-items">Cum odio, iste quia doloribus autem;</li>
+              <li class="buy-list-items">Aperiam nulla ea neque.</li>
+              <li class="buy-list-items">Porro officia cumque sint deleniti;</li>
+              <li class="buy-list-items">Тemo facere rem vitae odit;</li>
+              <li class="buy-list-items">Cum odio, iste quia doloribus autem;</li>
+              <li class="buy-list-items">Aperiam nulla ea neque.</li>
+            </ol>
+            <button class="buy-btn">buy</button>
+          </div>
         </section>
       </main>
-      <footer></footer>
+      <footer class="footer">
+        <section class="contacts">
+          <span class="footer-title">Contacts</span>
+          <form class="footer-form" action="#" method="POST">
+            <input type="text" placeholder="Your name:">
+            <input type="email" placeholder="Your email:">
+            <textarea  name=" message:" id="Your message:" cols="30" rows="10" placeholder="Your message:"></textarea>
+            <input  type="submit" value="Send">
+
+          </form>
+          <div class="footer_contacts"></div>
+          
+        </section>
+        <section>
+          <p class="copyright">copyright </p>
+        </section>
+      </footer>
     </div>
   </body>
-</html>
+  </html>
