--- a/index.html
+++ b/index.html
@@ -274,7 +274,21 @@
             <input  type="submit" value="Send">
 
           </form>
-          <div class="footer_contacts"></div>
+          <div class="footer_contacts">
+            <ul class="contacts-list">
+              <li class="contacts-item">here_your_login_skype</li>
+              <li class="contacts-item">279679659</li>
+              <li class="contacts-item">psdhtmlcss@mail.ru</li>
+              <li class="contacts-item">80 00 4568 55 55</li>
+            </ul>
+            <div class="social">
+              <a class="social-item item1" href="#"></a>
+              <a class="social-item item2" href="#"></a>
+              <a class="social-item item3" href="#"></a>
+              <a class="social-item item4" href="#"></a>
+              <a class="social-item item5" href="#"></a>
+            </div>
+          </div>
           
         </section>
         <section>
