--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
           </form>
           <div class="footer_contacts">
             <ul class="contacts-list">
-              <li class="contacts-item">here_your_login_skype</li>
-              <li class="contacts-item">279679659</li>
-              <li class="contacts-item">psdhtmlcss@mail.ru</li>
-              <li class="contacts-item">80 00 4568 55 55</li>
+              <li class="contacts-item skype">here_your_login_skype</li>
+              <li class="contacts-item icq">279679659</li>
+              <li class="contacts-item mail">psdhtmlcss@mail.ru</li>
+              <li class="contacts-item number">80 00 4568 55 55</li>
             </ul>
             <div class="social">
               <a class="social-item item1" href="#"></a>
